[gd_scene load_steps=14 format=3 uid="uid://cevkax6c3ykvk"]

[ext_resource type="Script" path="res://Scripts/level.gd" id="1_3o71s"]
[ext_resource type="AudioStream" uid="uid://cj7bduxoenlrd" path="res://assets/Audio/y2mate.com - Thirty Seconds To Mars  ATTACK.mp3" id="1_n0q0l"]
[ext_resource type="PackedScene" uid="uid://d0r6ir7cykx45" path="res://Scenes/enemy.tscn" id="2_lbgcr"]
[ext_resource type="Texture2D" uid="uid://ckk6yoj2qe0au" path="res://assets/images/bg-back.png" id="3_hxlqo"]
[ext_resource type="PackedScene" uid="uid://dhq8trvkvetbe" path="res://Scenes/apple.tscn" id="3_mfvu7"]
[ext_resource type="Texture2D" uid="uid://dn1owaq456cu2" path="res://assets/images/bg-stars.png" id="4_kptb4"]
[ext_resource type="Texture2D" uid="uid://ckqgqhn8k8rm3" path="res://assets/images/bg-planet.png" id="5_sj462"]
[ext_resource type="PackedScene" uid="uid://kf0vyyv25q68" path="res://Scenes/player.tscn" id="7_djw8u"]
[ext_resource type="PackedScene" uid="uid://hf81ixqbpjmm" path="res://Scenes/gui.tscn" id="8_fvkbw"]

[sub_resource type="Animation" id="Animation_7ch08"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_liqo2"]
resource_name = "desaparecer"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 160)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mneyu"]
_data = {
"RESET": SubResource("Animation_7ch08"),
"desaparecer": SubResource("Animation_liqo2")
}

[sub_resource type="Curve2D" id="Curve2D_4oi0g"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 261, 2, 0, 0, 0, 0, 263, 159, 0, 0, 0, 0, 275, 159, 0, 0, 0, 0, 274, 4, 0, 0, 0, 0, 261, 3)
}
point_count = 5

[node name="Level" type="Node2D" groups=["Level"]]
script = ExtResource("1_3o71s")
enemy = ExtResource("2_lbgcr")
apple = ExtResource("3_mfvu7")

[node name="Settings" type="Node" parent="."]

[node name="Music" type="AudioStreamPlayer2D" parent="Settings"]
stream = ExtResource("1_n0q0l")
autoplay = true

[node name="Timer" type="Timer" parent="Settings"]
wait_time = 0.92
autostart = true

[node name="Timer2" type="Timer" parent="Settings"]
wait_time = 3.0
autostart = true

[node name="Background" type="Node" parent="."]

[node name="Back" type="ParallaxBackground" parent="Background"]

[node name="ParallaxLayer" type="ParallaxLayer" parent="Background/Back"]
motion_mirroring = Vector2(272, 0)

[node name="Sprite2D" type="Sprite2D" parent="Background/Back/ParallaxLayer"]
position = Vector2(1, 0)
scale = Vector2(1, 1.01875)
texture = ExtResource("3_hxlqo")
centered = false

[node name="Stars" type="ParallaxBackground" parent="Background"]

[node name="ParallaxLayer" type="ParallaxLayer" parent="Background/Stars"]
motion_mirroring = Vector2(272, 0)

[node name="Sprite2D" type="Sprite2D" parent="Background/Stars/ParallaxLayer"]
texture = ExtResource("4_kptb4")
centered = false

[node name="Planet_1" type="ParallaxBackground" parent="Background"]

[node name="ParallaxLayer" type="ParallaxLayer" parent="Background/Planet_1"]
motion_mirroring = Vector2(544, 0)

[node name="Sprite2D" type="Sprite2D" parent="Background/Planet_1/ParallaxLayer"]
texture = ExtResource("5_sj462")
centered = false

[node name="AnimatedSprite2D" type="AnimationPlayer" parent="Background/Planet_1/ParallaxLayer/Sprite2D"]
libraries = {
"": SubResource("AnimationLibrary_mneyu")
}
speed_scale = 0.5

[node name="Planet_2" type="ParallaxBackground" parent="Background"]

[node name="ParallaxLayer" type="ParallaxLayer" parent="Background/Planet_2"]
motion_offset = Vector2(272, 0)
motion_mirroring = Vector2(272, 0)

[node name="Sprite2D" type="Sprite2D" parent="Background/Planet_2/ParallaxLayer"]
texture = ExtResource("5_sj462")
centered = false
offset = Vector2(272, 0)
flip_v = true

[node name="PathSpawn" type="Path2D" parent="."]
curve = SubResource("Curve2D_4oi0g")

[node name="PathFollow" type="PathFollow2D" parent="PathSpawn"]
position = Vector2(261, 2)
rotation = 1.55806

[node name="Player" parent="." instance=ExtResource("7_djw8u")]

[node name="GUI" parent="." instance=ExtResource("8_fvkbw")]

[connection signal="timeout" from="Settings/Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Settings/Timer2" to="." method="_on_timer_2_timeout"]
